--- a/index.ipynb
+++ b/index.ipynb
@@ -214,7 +214,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names_and_ranks = for index in city_indices \n",
+    "names_and_ranks = for index in city_indices\n",
+    "    print\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
