--- a/index.ipynb
+++ b/index.ipynb
@@ -210,20 +210,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-12-a124300a9928>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-15-ba1618ddf785>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-a124300a9928>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    names_and_ranks = for index in list(range(0, len(cities)))\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-ba1618ddf785>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    names_and_ranks = for index in list(range(0, len(cities))):\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "names_and_ranks = for index in list(range(0, len(cities)))\n",
+    "names_and_ranks = for index in list(range(0, len(cities))):\n",
     "    print(city_indices[index]+\"'\",city_names[index])\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
