--- a/index.ipynb
+++ b/index.ipynb
@@ -223,8 +223,8 @@
     }
    ],
    "source": [
-    "names_and_ranks = for index in city_indices:\n",
-    "    print(city_names[index])\n",
+    "names_and_ranks = for index in list(range(0, len(cities))):\n",
+    "    print(citycity_names[index])\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
