--- a/index.ipynb
+++ b/index.ipynb
@@ -210,21 +210,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-17-de0dd2c004dd>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-18-82489b70bdb4>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-de0dd2c004dd>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    names_and_ranks = for index in city_indices:\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-82489b70bdb4>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    names_and_ranks = for index in list(range(0, len(cities))):\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = for index in list(range(0, len(cities))):\n",
-    "    print(city_indices+\"city_names[index])\n",
+    "    print(city_indices+\",\",city_names[index])\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
