--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
     }
    ],
    "source": [
-    "names_and_ranks = for indexin city_indices:\n",
+    "names_and_ranks = [ ]for index in city_indices:\n",
     "    print(city_names)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
