--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
    "source": [
     "names_and_ranks = [ ]\n",
     "for i in city_indices:\n",
-    "    print(city_names)\n",
+    "    print(names_and_r)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
