--- a/index.ipynb
+++ b/index.ipynb
@@ -210,25 +210,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'index' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-0fc6a7f23b26>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mnames_and_ranks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m \u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcity_indices\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mnames_and_ranks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'{index+1}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnames_and_ranks\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# write a for loop that adds the properly formatted string to the names_and_ranks list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'index' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1']\n",
+      "['1', '2']\n",
+      "['1', '2', '3']\n",
+      "['1', '2', '3', '4']\n",
+      "['1', '2', '3', '4', '5']\n",
+      "['1', '2', '3', '4', '5', '6']\n",
+      "['1', '2', '3', '4', '5', '6', '7']\n",
+      "['1', '2', '3', '4', '5', '6', '7', '8']\n",
+      "['1', '2', '3', '4', '5', '6', '7', '8', '9']\n",
+      "['1', '2', '3', '4', '5', '6', '7', '8', '9', '10']\n",
+      "['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11']\n",
+      "['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12']\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = [ ]\n",
     "for i in city_indices:\n",
-    "    names_and_ranks.append(f'{index+1}')\n",
+    "    names_and_ranks.append(f'{i+1}')\n",
     "    print(names_and_ranks)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
