--- a/index.ipynb
+++ b/index.ipynb
@@ -210,25 +210,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1']\n",
-      "['1', '2']\n",
-      "['1', '2', '3']\n",
-      "['1', '2', '3', '4']\n",
-      "['1', '2', '3', '4', '5']\n",
-      "['1', '2', '3', '4', '5', '6']\n",
-      "['1', '2', '3', '4', '5', '6', '7']\n",
-      "['1', '2', '3', '4', '5', '6', '7', '8']\n",
-      "['1', '2', '3', '4', '5', '6', '7', '8', '9']\n",
-      "['1', '2', '3', '4', '5', '6', '7', '8', '9', '10']\n",
-      "['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11']\n",
-      "['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12']\n"
+      "['1+\",\",Buenos Aires']\n",
+      "['1+\",\",Buenos Aires', '2+\",\",Toronto']\n",
+      "['1+\",\",Buenos Aires', '2+\",\",Toronto', '3+\",\",Pyeongchang']\n",
+      "['1+\",\",Buenos Aires', '2+\",\",Toronto', '3+\",\",Pyeongchang', '4+\",\",Marakesh']\n",
+      "['1+\",\",Buenos Aires', '2+\",\",Toronto', '3+\",\",Pyeongchang', '4+\",\",Marakesh', '5+\",\",Albuquerque']\n",
+      "['1+\",\",Buenos Aires', '2+\",\",Toronto', '3+\",\",Pyeongchang', '4+\",\",Marakesh', '5+\",\",Albuquerque', '6+\",\",Los Cabos']\n",
+      "['1+\",\",Buenos Aires', '2+\",\",Toronto', '3+\",\",Pyeongchang', '4+\",\",Marakesh', '5+\",\",Albuquerque', '6+\",\",Los Cabos', '7+\",\",Greenville']\n",
+      "['1+\",\",Buenos Aires', '2+\",\",Toronto', '3+\",\",Pyeongchang', '4+\",\",Marakesh', '5+\",\",Albuquerque', '6+\",\",Los Cabos', '7+\",\",Greenville', '8+\",\",Archipelago Sea']\n",
+      "['1+\",\",Buenos Aires', '2+\",\",Toronto', '3+\",\",Pyeongchang', '4+\",\",Marakesh', '5+\",\",Albuquerque', '6+\",\",Los Cabos', '7+\",\",Greenville', '8+\",\",Archipelago Sea', '9+\",\",Walla Walla Valley']\n",
+      "['1+\",\",Buenos Aires', '2+\",\",Toronto', '3+\",\",Pyeongchang', '4+\",\",Marakesh', '5+\",\",Albuquerque', '6+\",\",Los Cabos', '7+\",\",Greenville', '8+\",\",Archipelago Sea', '9+\",\",Walla Walla Valley', '10+\",\",Salina Island']\n",
+      "['1+\",\",Buenos Aires', '2+\",\",Toronto', '3+\",\",Pyeongchang', '4+\",\",Marakesh', '5+\",\",Albuquerque', '6+\",\",Los Cabos', '7+\",\",Greenville', '8+\",\",Archipelago Sea', '9+\",\",Walla Walla Valley', '10+\",\",Salina Island', '11+\",\",Solta']\n",
+      "['1+\",\",Buenos Aires', '2+\",\",Toronto', '3+\",\",Pyeongchang', '4+\",\",Marakesh', '5+\",\",Albuquerque', '6+\",\",Los Cabos', '7+\",\",Greenville', '8+\",\",Archipelago Sea', '9+\",\",Walla Walla Valley', '10+\",\",Salina Island', '11+\",\",Solta', '12+\",\",Iguazu Falls']\n"
      ]
     }
    ],
