--- a/index.ipynb
+++ b/index.ipynb
@@ -242,16 +242,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'12+\",\",Iguazu Falls'"
+       "'12.Iguazu Falls'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
