--- a/index.ipynb
+++ b/index.ipynb
@@ -242,22 +242,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'12.Iguazu Falls'"
+       "'1.Buenos Aires'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "name_and_ranks[0]"
+    "names_and_ranks[0]"
    ]
   },
   {
