--- a/index.ipynb
+++ b/index.ipynb
@@ -242,22 +242,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1.Buenos Aires'"
+       "'2.Toronto'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "names_and_ranks[0]"
+    "names_and_ranks[1]"
    ]
   },
   {
