--- a/index.ipynb
+++ b/index.ipynb
@@ -273,7 +273,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_populations = []"
+    "city_populations = []\n",
+    "for "
    ]
   },
   {
