--- a/index.ipynb
+++ b/index.ipynb
@@ -274,7 +274,7 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for index in cities_in"
+    "for index in cities_indices"
    ]
   },
   {
