--- a/index.ipynb
+++ b/index.ipynb
@@ -274,7 +274,8 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for city in cities_indices"
+    "for city in cities:\n",
+    "    "
    ]
   },
   {
