automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -275,7 +275,8 @@
    "source": [
     "city_populations = []\n",
     "for city in cities:\n",
-    "    city_popultaions.append(cities['population'])"
+    "    city_popultaions.append(cities['population'])\n",
+    "    print(city_pop)"
    ]
   },
   {
