automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -286,7 +286,7 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for city in cities:\n",
+    "for city in cit:\n",
     "    city_popultaions.append(cities['population'])\n",
     "    print(city_populations)"
    ]
