--- a/index.ipynb
+++ b/index.ipynb
@@ -287,7 +287,7 @@
    "source": [
     "city_populations = []\n",
     "for city_name in city_names:\n",
-    "    city_popultaions.append(cities['population'])\n",
+    "    city_popultaions.append(cit['population'])\n",
     "    print(city_populations)"
    ]
   },
