--- a/index.ipynb
+++ b/index.ipynb
@@ -287,7 +287,7 @@
    "source": [
     "city_populations = []\n",
     "for city in cities:\n",
-    "    city_populations.append(city['population'])\n",
+    "    city_populations.append(city['Population'])\n",
     "    print(city_populations)"
    ]
   },
