--- a/index.ipynb
+++ b/index.ipynb
@@ -441,7 +441,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_areas = []"
+    "city_areas = []\n",
+    "for city in ci"
    ]
   },
   {
