--- a/index.ipynb
+++ b/index.ipynb
@@ -442,7 +442,8 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "for city in ci"
+    "for city in cities:\n",
+    "    cityare"
    ]
   },
   {
