automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -443,7 +443,8 @@
    "source": [
     "city_areas = []\n",
     "for city in cities:\n",
-    "    city_areas.append(city[\"Areas\"])"
+    "    city_areas.append(city[\"Areas\"])\n",
+    "    print()"
    ]
   },
   {
