automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -437,25 +437,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'Areas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-57-4b1756110b2a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mcity_areas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcity\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcities\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mcity_areas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcity\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Areas\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcity_areas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'Areas'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4758]\n",
+      "[4758, 2731]\n",
+      "[4758, 2731, 3194]\n",
+      "[4758, 2731, 3194, 200]\n",
+      "[4758, 2731, 3194, 200, 491]\n",
+      "[4758, 2731, 3194, 200, 491, 3750]\n",
+      "[4758, 2731, 3194, 200, 491, 3750, 68]\n",
+      "[4758, 2731, 3194, 200, 491, 3750, 68, 8300]\n",
+      "[4758, 2731, 3194, 200, 491, 3750, 68, 8300, 33]\n",
+      "[4758, 2731, 3194, 200, 491, 3750, 68, 8300, 33, 27]\n",
+      "[4758, 2731, 3194, 200, 491, 3750, 68, 8300, 33, 27, 59]\n",
+      "[4758, 2731, 3194, 200, 491, 3750, 68, 8300, 33, 27, 59, 672]\n"
      ]
     }
    ],
    "source": [
     "city_areas = []\n",
     "for city in cities:\n",
-    "    city_areas.append(city[\"Areas\"])\n",
+    "    city_areas.append(city[\"Area\"])\n",
     "    print(city_areas)"
    ]
   },
