--- a/index.ipynb
+++ b/index.ipynb
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
           "12.Iguazu Falls"
          ],
          "type": "bar",
-         "uid": "a378c8f0-e6a9-11e8-af88-0242ac11000e",
+         "uid": "0e8e3bfc-e6aa-11e8-af88-0242ac11000e",
          "x": [
           "1.Buenos Aires",
           "2.Toronto",
@@ -560,7 +560,7 @@
           "12.Iguazu Falls"
          ],
          "type": "bar",
-         "uid": "a378d048-e6a9-11e8-af88-0242ac11000e",
+         "uid": "0e8e3fbc-e6aa-11e8-af88-0242ac11000e",
          "x": [
           "1.Buenos Aires",
           "2.Toronto",
@@ -575,16 +575,29 @@
           "11.Solta",
           "12.Iguazu Falls"
          ],
-         "y": []
+         "y": [
+          4758,
+          2731,
+          3194,
+          200,
+          491,
+          3750,
+          68,
+          8300,
+          33,
+          27,
+          59,
+          672
+         ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"07f40717-61ef-4476-a448-d548ac517d11\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"07f40717-61ef-4476-a448-d548ac517d11\", [{\"name\": \"populations\", \"text\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"x\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"y\": [2891000, 2800000, 2581000, 928850, 559277, 287651, 84554, 60000, 32237, 4000, 1700, 0], \"type\": \"bar\", \"uid\": \"a37e9ae6-e6a9-11e8-af88-0242ac11000e\"}, {\"name\": \"areas\", \"text\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"x\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"y\": [], \"type\": \"bar\", \"uid\": \"a37e9e6a-e6a9-11e8-af88-0242ac11000e\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"cc6949d5-339c-4ddb-b391-53dfc24fb822\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cc6949d5-339c-4ddb-b391-53dfc24fb822\", [{\"name\": \"populations\", \"text\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"x\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"y\": [2891000, 2800000, 2581000, 928850, 559277, 287651, 84554, 60000, 32237, 4000, 1700, 0], \"type\": \"bar\", \"uid\": \"0e9faeaa-e6aa-11e8-af88-0242ac11000e\"}, {\"name\": \"areas\", \"text\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"x\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"y\": [4758, 2731, 3194, 200, 491, 3750, 68, 8300, 33, 27, 59, 672], \"type\": \"bar\", \"uid\": \"0e9fb102-e6aa-11e8-af88-0242ac11000e\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"07f40717-61ef-4476-a448-d548ac517d11\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"07f40717-61ef-4476-a448-d548ac517d11\", [{\"name\": \"populations\", \"text\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"x\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"y\": [2891000, 2800000, 2581000, 928850, 559277, 287651, 84554, 60000, 32237, 4000, 1700, 0], \"type\": \"bar\", \"uid\": \"a37e9ae6-e6a9-11e8-af88-0242ac11000e\"}, {\"name\": \"areas\", \"text\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"x\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"y\": [], \"type\": \"bar\", \"uid\": \"a37e9e6a-e6a9-11e8-af88-0242ac11000e\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"cc6949d5-339c-4ddb-b391-53dfc24fb822\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cc6949d5-339c-4ddb-b391-53dfc24fb822\", [{\"name\": \"populations\", \"text\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"x\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"y\": [2891000, 2800000, 2581000, 928850, 559277, 287651, 84554, 60000, 32237, 4000, 1700, 0], \"type\": \"bar\", \"uid\": \"0e9faeaa-e6aa-11e8-af88-0242ac11000e\"}, {\"name\": \"areas\", \"text\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"x\": [\"1.Buenos Aires\", \"2.Toronto\", \"3.Pyeongchang\", \"4.Marakesh\", \"5.Albuquerque\", \"6.Los Cabos\", \"7.Greenville\", \"8.Archipelago Sea\", \"9.Walla Walla Valley\", \"10.Salina Island\", \"11.Solta\", \"12.Iguazu Falls\"], \"y\": [4758, 2731, 3194, 200, 491, 3750, 68, 8300, 33, 27, 59, 672], \"type\": \"bar\", \"uid\": \"0e9fb102-e6aa-11e8-af88-0242ac11000e\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
